@@ -114,9 +114,11 @@ vips_resample_operation_init( void )
 	extern GType vips_shrink_get_type( void ); 
 	extern GType vips_quadratic_get_type( void ); 
 	extern GType vips_affine_get_type( void ); 
+	extern GType vips_similarity_get_type( void ); 
 
 	vips_shrink_get_type(); 
 	vips_quadratic_get_type(); 
 	vips_affine_get_type(); 
+	vips_similarity_get_type(); 
 }
 
